Module, Package, File-io, Class practice

--- a/python_basic/04_String/question.ipynb
+++ b/python_basic/04_String/question.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b010956b",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "나는 29살이고, seoul에 살고 있습니다.\n"
+      "나는 29살이고, seoul에 살고 있습니다.\n",
+      "1\n"
      ]
     }
    ],
@@ -65,7 +66,8 @@
     "age = 29\n",
     "city = 'seoul'\n",
     "\n",
-    "print(f\"나는 {age}살이고, {city}에 살고 있습니다.\")"
+    "print(f\"나는 {age}살이고, {city}에 살고 있습니다.\")\n",
+    "print(1)"
    ]
   }
  ],
