--- a/python_basic/12_Class/exercise.ipynb
+++ b/python_basic/12_Class/exercise.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "273ddb67",
    "metadata": {},
    "outputs": [
@@ -140,57 +140,65 @@
      "output_type": "stream",
      "text": [
       "카피바라\n",
+      "전사\n",
+      "전사\n",
+      "전사\n",
       "법사\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "잘못된 캐릭터 타입을 선택하였습니다.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# print(my_character.__type) 바로 접근 안됨\u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[38;5;28mprint\u001b[39m(my_character.get_type())\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m \u001b[43mmy_character\u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_type\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m법사\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m my_character.get_type()\n\u001b[32m     26\u001b[39m \u001b[38;5;66;03m# my_character2 = Character('capybara', '힐러')\u001b[39;00m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# print(my_character2.nickname)\u001b[39;00m\n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m# print(my_character2.get_type())\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mCharacter.set_type\u001b[39m\u001b[34m(self, type)\u001b[39m\n\u001b[32m     13\u001b[39m     \u001b[38;5;28mself\u001b[39m.__type = \u001b[38;5;28mtype\u001b[39m\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33m잘못된 캐릭터 타입을 선택하였습니다.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: 잘못된 캐릭터 타입을 선택하였습니다."
      ]
     }
    ],
    "source": [
+    "# private : 숨겨서 바로 접근하지 못하게 함\n",
     "class Character:\n",
+    "\n",
     "    def __init__(self, nickname, type):\n",
-    "        self.nickname = nickname\n",
-    "        self.__type = type\n",
+    "        self.nickname = nickname # 들어오는 닉네임을 자기 자신의 닉네임에 저장\n",
+    "        self.type = type # 들어오는 타입을 숨겨서 바로 접근하지 못하게 함\n",
     "\n",
+    "    # 숨겨진 변수의 값을 읽을 때 사용\n",
     "    def get_type(self):\n",
-    "        return self.__type\n",
+    "        return self.type\n",
     "\n",
+    "# 숨겨진 변수의 값을 설정할 때 사용\n",
     "    def set_type(self, type):\n",
     "        character_types = ['전사', '법사', '치유사']\n",
     "        for given_type in character_types:\n",
-    "            if(type == given_type):\n",
-    "                self.__type = type\n",
+    "            if (type == given_type):\n",
+    "                self.type = type\n",
     "                return\n",
     "\n",
-    "            raise ValueError(\"잘못된 캐릭터 타입을 선택하였습니다.\")\n",
+    "        raise ValueError('잘못된 캐릭터 타입을 선책하셨습니다.')\n",
     "\n",
-    "my_character = Character('카피바라', '법사')\n",
+    "my_character = Character(\"카피바라\", '전사') # 매개변수는 init 매서드의 매개변수 갯수만큼\n",
     "\n",
     "print(my_character.nickname)\n",
-    "# print(my_character.__type) 바로 접근 안됨\n",
+    "print(my_character.type) # 에러남 숨겨두어서 찾을 수 없음\n",
+    "print(my_character.type) # 에러남 숨겨두어서 찾을 수 없음\n",
     "print(my_character.get_type())\n",
     "my_character.set_type('법사')\n",
-    "my_character.get_type()\n",
-    "\n",
-    "# my_character2 = Character('capybara', '힐러')\n",
-    "# print(my_character2.nickname)\n",
-    "# print(my_character2.get_type())\n"
+    "print(my_character.get_type())\n",
+    "#my_character.set_type('흑마법사') # 에러남 : 허용된 type이 아니기 때문에 "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d606222f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "my_character2 = Character(\"capybara\", '힐러')\n",
+    "print(my_character2.nickname)\n",
+    "print(my_character2.get_type())\n",
+    "#my_character2.set_type('흑마법사') # 에러남 : 허용된 type이 아니기 때문에 \n",
+    "print(my_character2.get_type())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4a9865f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -212,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
