주말에 공부

--- a/python_basic/12_Class/question_re.ipynb
+++ b/python_basic/12_Class/question_re.ipynb
@@ -233,11 +233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "0b43ca27",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "바깥 함수 작성중\n",
+      "중첩 함수 완료\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nested_function():\n",
+    "    status = '작성중'\n",
+    "    print('바깥 함수', status)\n",
+    "\n",
+    "    def inner_function():\n",
+    "        status = '완료'\n",
+    "        print('중첩 함수', status)\n",
+    "\n",
+    "    inner_function()\n",
+    "nested_function()"
+   ]
   }
  ],
  "metadata": {
