--- a/python_basic/practice/practice01.ipynb
+++ b/python_basic/practice/practice01.ipynb
@@ -166,12 +166,24 @@
    "source": [
     "\n",
     "### 예제 1: 상태 변경 메서드\n",
-    "#### 문제: Car 클래스에 speed 속성(기본값 0)을 두고, accelerate(amount) 메서드로 속도를 증가시키세요."
+    "#### 문제: Car 클래스에 speed 속성(기본값 0)을 두고, accelerate(amount) 메서드로 속도를 증가시키세요.\n",
+    "\n",
+    "### 예제 2: 조건부 상태 변경\n",
+    "#### 문제: brake() 메서드를 추가하여 속도를 줄이되, 0 미만으로는 내려가지 않게 하세요.\n",
+    "\n",
+    "### 예제 3: 기본값 파라미터\n",
+    "#### 문제: __init__에서 color를 입력받되, 입력이 없으면 \"White\"로 설정되게 하세요.\n",
+    "\n",
+    "### 예제 4: 클래스 변수\n",
+    "#### 문제: 모든 Car 인스턴스가 공유하는 변수 wheels = 4를 정의하고 출력하세요.\n",
+    "\n",
+    "### 예제 5: 메서드 간 호출\n",
+    "#### 문제: stop() 메서드를 만들고, 내부에서 brake()를 반복 호출하거나 속도를 0으로 강제 설정하세요."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "2305532b",
    "metadata": {},
    "outputs": [
@@ -179,73 +191,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n",
-      "50\n"
+      "white\n",
+      "4\n",
+      "0\n",
+      "60\n",
+      "0\n"
      ]
     }
    ],
    "source": [
     "class Car:\n",
-    "    def __init__(self):\n",
-    "        self.speed = 0\n",
+    "\n",
+    "    def __init__(self, speed, color='white'):\n",
+    "        self.speed = speed\n",
+    "        self.color = color\n",
+    "        self.wheels = 4\n",
     "\n",
     "    def accelerate(self, amount):\n",
     "        if amount > 0:\n",
     "            self.speed = self.speed + amount\n",
     "\n",
     "    def brake(self, minus):\n",
-    "        if (self.speed - minus) > 0:\n",
+    "        if self.speed >= minus:\n",
     "            self.speed = self.speed - minus\n",
-    "                \n",
-    "car = Car()\n",
-    "car.accelerate(50)\n",
+    "        else:\n",
+    "            self.speed = 0\n",
+    "\n",
+    "    def stop(self):\n",
+    "        self.speed = 0\n",
+    "\n",
+    "car = Car(50)\n",
+    "\n",
+    "print(car.color)\n",
+    "print(car.wheels)\n",
+    "\n",
+    "car.accelerate(10)\n",
+    "car.accelerate(30)\n",
+    "\n",
+    "car.brake(70)\n",
+    "car.brake(100)\n",
     "print(car.speed)\n",
-    "car.brake()\n",
+    "\n",
+    "car.accelerate(30)\n",
+    "car.accelerate(30)\n",
+    "print(car.speed)\n",
+    "\n",
+    "car.stop()\n",
     "print(car.speed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad9f7a74",
-   "metadata": {},
-   "source": [
-    "### 예제 2: 조건부 상태 변경\n",
-    "#### 문제: brake() 메서드를 추가하여 속도를 줄이되, 0 미만으로는 내려가지 않게 하세요."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e574381f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d91d5f25",
-   "metadata": {},
-   "source": [
-    "### 예제 3: 기본값 파라미터\n",
-    "#### 문제: __init__에서 color를 입력받되, 입력이 없으면 \"White\"로 설정되게 하세요."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5781598b",
-   "metadata": {},
-   "source": [
-    "### 예제 4: 클래스 변수\n",
-    "#### 문제: 모든 Car 인스턴스가 공유하는 변수 wheels = 4를 정의하고 출력하세요."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7bf0738d",
-   "metadata": {},
-   "source": [
-    "### 예제 5: 메서드 간 호출\n",
-    "#### 문제: stop() 메서드를 만들고, 내부에서 brake()를 반복 호출하거나 속도를 0으로 강제 설정하세요."
    ]
   },
   {
@@ -263,43 +255,59 @@
    "metadata": {},
    "source": [
     "### 예제 1: 부모 클래스 정의\n",
-    "#### 문제: Animal 클래스를 만들고 speak() 메서드에 \"소리를 냅니다\"를 출력하게 하세요."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4d43c2e",
-   "metadata": {},
-   "source": [
+    "#### 문제: Animal 클래스를 만들고 speak() 메서드에 \"소리를 냅니다\"를 출력하게 하세요.\n",
+    "\n",
     "### 예제 2: 자식 클래스 상속\n",
-    "#### 문제: Animal을 상속받는 Dog 클래스를 만드세요."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "18b54b1c",
-   "metadata": {},
-   "source": [
+    "#### 문제: Animal을 상속받는 Dog 클래스를 만드세요.\n",
+    "\n",
     "### 예제 3: 메서드 오버라이딩 (Overriding)\n",
-    "#### 문제: Dog 클래스에서 speak()를 재정의하여 \"멍멍!\"을 출력하게 하세요."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b73613db",
-   "metadata": {},
-   "source": [
+    "#### 문제: Dog 클래스에서 speak()를 재정의하여 \"멍멍!\"을 출력하게 하세요.\n",
+    "\n",
     "### 예제 4: super() 사용\n",
-    "#### 문제: Dog의 __init__에서 부모의 __init__을 호출하여 breed(견종) 속성을 추가하세요."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ded918c",
-   "metadata": {},
-   "source": [
+    "#### 문제: Dog의 __init__에서 부모의 __init__을 호출하여 breed(견종) 속성을 추가하세요.\n",
+    "\n",
     "### 예제 5: 타입 확인 (isinstance)\n",
     "#### 문제: 생성된 객체가 Dog의 인스턴스인지, Animal의 인스턴스인지 확인하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "32437387",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "말티즈\n",
+      "말티즈\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "\n",
+    "    def __init__(self, breed=\"말티즈\"):\n",
+    "        self.breed = breed\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(\"소리를 냅니다.\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "\n",
+    "    def __init__(self, breed=\"불독\"):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(\"멍멍!\")\n",
+    "\n",
+    "animal = Animal()\n",
+    "print(animal.breed)\n",
+    "# animal.speak()\n",
+    "\n",
+    "dog = Dog()\n",
+    "print(dog.breed)"
    ]
   },
   {
@@ -317,14 +325,7 @@
    "metadata": {},
    "source": [
     "### 예제 1: 객체 문자열 표현 (__str__)\n",
-    "#### 문제: 객체를 print() 찍었을 때 \"<Book: 파이썬, 가격: 1000>\" 형태로 나오게 하세요."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a03948b",
-   "metadata": {},
-   "source": [
+    "#### 문제: 객체를 print() 찍었을 때 \"<Book: 파이썬, 가격: 1000>\" 형태로 나오게 하세요.\n",
     "### 예제 2: 연산자 오버로딩 (__add__)\n",
     "#### 문제: 두 Book 객체의 가격을 더한 값을 반환하도록 + 연산자를 정의하세요.\n",
     "### 예제 3: 정보 은닉 (Private Variable)\n",
@@ -333,6 +334,40 @@
     "#### 문제: price라는 메서드에 @property 데코레이터를 붙여 변수처럼 값에 접근하게 하세요.\n",
     "### 예제 5: Setter (@xx.setter)\n",
     "#### 문제: price 설정 시 0보다 작은 값은 들어가지 못하게 유효성 검사를 추가하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "987f3b31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Book: 파이썬, 가격: 1000, 2000 Book: 다람쥐, 가격: 2000, 4000\n",
+      "4000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Book:\n",
+    "    def __init__(self, book, price):\n",
+    "        self.book = book\n",
+    "        self.price1 = price\n",
+    "        self.price2 = price\n",
+    "        self.add = self.price1 + self.price2\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Book: {self.book}, 가격: {self.price1}, {self.add}\"\n",
+    "\n",
+    "book = Book('파이썬', 1000)\n",
+    "book2 = Book('다람쥐', 2000)\n",
+    "print(book, book2)\n",
+    "print(book2.add)\n",
+    "\n",
+    "\n"
    ]
   },
   {
