python_basic 마무리

--- a/python_basic/17_file-io/question.ipynb
+++ b/python_basic/17_file-io/question.ipynb
@@ -21,6 +21,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "359ac8f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오늘은 파일 입출력을 배웠습니다. \n",
+      "다양한 파일 확장자와 접근 모드를 사용할 수 있다는 점이 흥미로웠습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./quest/diary.txt\", 'w') as f:\n",
+    "    f.write(\"오늘은 파일 입출력을 배웠습니다. \\n다양한 파일 확장자와 접근 모드를 사용할 수 있다는 점이 흥미로웠습니다.\")\n",
+    "\n",
+    "with open(\"./quest/diary.txt\", 'r') as f_open:\n",
+    "    print(f_open.read())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cd5ce999",
    "metadata": {},
@@ -39,6 +62,114 @@
     "    ```\n",
     "    \n",
     "2. 파일을 닫고 다시 열어 모든 데이터를 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "194243d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "회사명, 직무, 결과\n",
+      "회사A,데이터 분석가,합격\n",
+      "회사B,소프트웨어 엔지니어,불합격\n",
+      "회사C,제품 관리자,진행중\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "\n",
+    "with open(\"./quest/applications.csv\", 'w') as f:\n",
+    "    f.write(\"회사명, 직무, 결과\\n회사A,데이터 분석가,합격\\n회사B,소프트웨어 엔지니어,불합격\\n회사C,제품 관리자,진행중\")\n",
+    "\n",
+    "with open(\"./quest/applications.csv\", 'r') as f_open:\n",
+    "    # print(f_open.read())\n",
+    "    reader = csv.reader(f_open)\n",
+    "    # print(reader)\n",
+    "    for i in reader:\n",
+    "        print(\",\".join(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "dfe624ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "회사명,직무,결과\n",
+      "회사A,데이터 분석가,합격\n",
+      "회사B,소프트웨어 엔지니어,불합격\n",
+      "회사C,제품 관리자,진행중\n"
+     ]
+    }
+   ],
+   "source": [
+    "# csv 형태로 저장하기\n",
+    "import csv\n",
+    "\n",
+    "data = [\n",
+    "    [\"회사명\", \"직무\", \"결과\"],\n",
+    "    [\"회사A\",\"데이터 분석가\",\"합격\"],\n",
+    "    [\"회사B\",\"소프트웨어 엔지니어\",\"불합격\"],\n",
+    "    [\"회사C\",\"제품 관리자\",\"진행중\"]\n",
+    "]\n",
+    "\n",
+    "with open(\"applications.csv\", 'w', newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(data)\n",
+    "\n",
+    "with open(\"applications.csv\", 'r') as f_open:\n",
+    "    reader = csv.reader(f_open)\n",
+    "    for i in reader:\n",
+    "        print(\",\".join(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "7bf6b571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'회사명': '회사A', '직무': '데이터 분석가', '결과': '합격'}\n",
+      "{'회사명': '회사B', '직무': '소프트웨어 엔지니어', '결과': '불합격'}\n",
+      "{'회사명': '회사C', '직무': '제품 관리자', '결과': '진행중'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 딕셔너리 형태로 저장하기\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "data = [\n",
+    "    {\"회사명\": \"회사A\", \"직무\": \"데이터 분석가\", \"결과\": \"합격\"},\n",
+    "    {\"회사명\": \"회사B\", \"직무\": \"소프트웨어 엔지니어\", \"결과\": \"불합격\"},\n",
+    "    {\"회사명\": \"회사C\", \"직무\": \"제품 관리자\", \"결과\": \"진행중\"}\n",
+    "]\n",
+    "\n",
+    "with open(\"applications.csv\", 'w', newline=\"\") as f:\n",
+    "    fieldnames = [\"회사명\", \"직무\", '결과']\n",
+    "    writer = csv.DictWriter(f, fieldnames = fieldnames) # CSV 작성 도구 생성 (딕셔너리)\n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(data) # 여러 행을 한꺼번에 작성\n",
+    "\n",
+    "with open(\"applications.csv\", 'r') as f_open:\n",
+    "    reader = csv.DictReader(f_open)\n",
+    "    for row in reader:\n",
+    "        print(row)"
    ]
   },
   {
@@ -62,6 +193,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "e1af2aa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARN] 2024-01-01 12:05:00: 메모리 사용량 증가\n",
+      "\n",
+      "[ERROR] 2024-01-01 12:10:00: 프로그램 종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./quest/system.log\", 'w') as f:\n",
+    "    f.write(\"[INFO] 2024-01-01 12:00:00: 시스템 시작\\n[WARN] 2024-01-01 12:05:00: 메모리 사용량 증가\\n[ERROR] 2024-01-01 12:10:00: 프로그램 종료\")\n",
+    "\n",
+    "with open(\"./quest/system.log\", 'r') as f_op:\n",
+    "\n",
+    "    while True:\n",
+    "        f_line = f_op.readline()\n",
+    "        if '[INFO]' in f_line:\n",
+    "            continue\n",
+    "        \n",
+    "        elif not f_line:\n",
+    "            break\n",
+    "\n",
+    "        print(f_line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "4ab4ab2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARN] 2024-01-01 12:05:00: 메모리 사용량 증가\n",
+      "\n",
+      "[ERROR] 2024-01-01 12:10:00: 프로그램 종료\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 로그파일쓰기\n",
+    "\n",
+    "with open('system.log', 'w') as f:\n",
+    "    log_content = [\n",
+    "        \"[INFO] 2024-01-01 12:00:00: 시스템 시작\\n\",\n",
+    "        \"[WARN] 2024-01-01 12:05:00: 메모리 사용량 증가\\n\",\n",
+    "        \"[ERROR] 2024-01-01 12:10:00: 프로그램 종료\"\n",
+    "    ]\n",
+    "    f.writelines(log_content)\n",
+    "\n",
+    "with open('system.log', 'r') as f:\n",
+    "    for line in f:\n",
+    "        if \"WARN\" in line or \"[ERROR]\" in line:\n",
+    "            print(line)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "82286fa6",
    "metadata": {},
@@ -80,6 +277,84 @@
     "    ```\n",
     "    \n",
     "2. 파일을 읽어와 다람쥐의 좋아하는 음식 리스트를 출력하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "716ffa10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"고기\", \"과자\", \"아이스크림\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "with open('favorite_foods.json', 'w') as json_file:\n",
+    "    json_file.write('{\"name\" : \"다람쥐\", \"favorite_foods\" : [\"고기\", \"과자\", \"아이스크림\"]}')\n",
+    "\n",
+    "with open('favorite_foods.json', 'r') as json_file:\n",
+    "    json_text = json_file.read()\n",
+    "    \n",
+    "    # print(json_text) == {\"name\" : \"다람쥐\", \"favorite_foods\" : [\"고기\", \"과자\", \"아이스크림\"]}\n",
+    "    print(json_text.split(\"[\")[1].split(\"]\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "3c2578d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['고기', '과자', '아이스크림']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# json 모듈 사용 시\n",
+    "import json\n",
+    "\n",
+    "data = '{\"name\" : \"다람쥐\",\"favorite_foods\" : [\"고기\", \"과자\", \"아이스크림\"]}'\n",
+    "\n",
+    "with open('favorite_food.json', 'w') as json_file:\n",
+    "    json_file.write(data)\n",
+    "\n",
+    "with open('favorite_food.json', 'r') as json_file:\n",
+    "    json_dict = json.load(json_file)\n",
+    "    # print(json_dict, type(json_dict))\n",
+    "    print(json_dict['favorite_foods'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d8708e00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['도토리', '호두', '밤']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"./quest/favorite_foods.json\", 'r') as jj:\n",
+    "    json_load = json.load(jj)\n",
+    "\n",
+    "    print(json_load[\"favorite_foods\"])"
    ]
   },
   {
@@ -113,6 +388,94 @@
    "id": "16eaef12",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "52f57280",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./quest/resume.html\", 'w') as f:\n",
+    "    f.write(\"\"\"\n",
+    "        <html>\n",
+    "            <head><title>다람쥐의 이력서</title></head>\n",
+    "            <body>\n",
+    "                <h1>다람쥐의 이력서</h1>\n",
+    "                <p>경력: 신입</p>\n",
+    "            </body>\n",
+    "        </html>\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "38c56db6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        <html>\n",
+      "            <head><title>다람쥐의 이력서</title></head>\n",
+      "            <body>\n",
+      "                <h1>다람쥐의 이력서</h1>\n",
+      "                <p>경력: 신입</p>\n",
+      "            </body>\n",
+      "        </html>\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./quest/resume.html\", 'r') as f:\n",
+    "    contents = f.read()\n",
+    "\n",
+    "print(contents)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "4122737a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        <html>\n",
+      "            <head><title>다람쥐의 이력서</title></head>\n",
+      "            <body>\n",
+      "                <h1>다람쥐의 이력서</h1>\n",
+      "                <p>경력: 1년</p>\n",
+      "            </body>\n",
+      "        </html>\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "modified_contents = contents.replace('신입', '1년')\n",
+    "\n",
+    "with open('./quest/resume.html', 'w') as f:\n",
+    "    f.write(modified_contents)\n",
+    "\n",
+    "with open('./quest/resume.html', 'r') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f149034d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -122,7 +485,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.0"
   }
  },
